2008-03-27  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Oliver.

        - re-fix Acid3, some code was incorrectly moved when fixing the Qt build

        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBox::buildLayoutInformationForTextBox):

2008-03-27  Simon Hausmann  <hausmann@webkit.org>

        Fix compilation against Qt 4.4 and one missing SVG_FONTS #ifdef.

        * platform/graphics/qt/FontQt.cpp:
        (WebCore::Font::floatWidth): Forgot to adjust this signture for Qt 4.4.
        * bindings/js/JSSVGElementWrapperFactory.cpp: Added a missing #ifdef
        for SVG_FONTS

2008-03-27  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Eric Seidel.

        Fix the Qt build and the build without ENABLE(SVG_FONTS)

        * WebCore.pro: Removed ElementTimeControl.idl as it's ObjC only and
        removed some SVG_FONTS specific idl files from IDL_BINDINGS for now
        * bindings/js/JSSVGElementWrapperFactory.cpp: altGlyph is
        ENABLE(SVG_FONTS) only
        * platform/graphics/qt/FontQt.cpp:
        (WebCore::Font::floatWidth): Adjust the function signature to Font.h
        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBox::buildLayoutInformationForTextBox): Fix
        compilation without SVG_FONTS
        * svg/SVGAltGlyphElement.cpp: Compile only if ENABLE(SVG_FONTS)
        * svg/SVGAltGlyphElement.h: Ditto
        * svg/svgtags.in: hkern and altGlyph are SVG_FONTS only.
        * svg/SVGTSpanElement.cpp:
        (WebCore::SVGTSpanElement::childShouldCreateRenderer): Compile without
        SVG_FONTS
        * svg/SVGTextElement.cpp:
        (WebCore::SVGTextElement::childShouldCreateRenderer): Ditto
        * svg/SVGTextPathElement.cpp:
        (WebCore::SVGTextPathElement::childShouldCreateRenderer):

2008-03-26  Timothy Hatcher  <timothy@apple.com>

        Rename some Inspector files to facilitate the up-coming UI refresh changes.
